--- a/.gitignore
+++ b/.gitignore
@@ -6,15 +6,15 @@ dist
 .DS_Store
 *.crt
 *.key
-amplitude.js
-amplitude.esm.js
-amplitude.min.js
-amplitude.nocompat.js
-amplitude.nocompat.min.js
-amplitude-snippet.min.js
-amplitude.native.js
-amplitude-segment-snippet.min.js
+datadive.js
+datadive.esm.js
+datadive.min.js
+datadive.nocompat.js
+datadive.nocompat.min.js
+datadive-snippet.min.js
+datadive.native.js
+datadive-segment-snippet.min.js
 .watchmanconfig
 package-lock.json
-amplitude.umd.js
-amplitude.umd.min.js
+datadive.umd.js
+datadive.umd.min.js
