--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,10 +26,10 @@ jobs:
     runs-on: ubuntu-18.04
     needs: [authorize]
     env:
-      GIT_AUTHOR_NAME: amplitude-sdk-bot
-      GIT_AUTHOR_EMAIL: amplitude-sdk-bot@users.noreply.github.com
-      GIT_COMMITTER_NAME: amplitude-sdk-bot
-      GIT_COMMITTER_EMAIL: amplitude-sdk-bot@users.noreply.github.com
+      GIT_AUTHOR_NAME: datadive-sdk-bot
+      GIT_AUTHOR_EMAIL: datadive-sdk-bot@users.noreply.github.com
+      GIT_COMMITTER_NAME: datadive-sdk-bot
+      GIT_COMMITTER_EMAIL: datadive-sdk-bot@users.noreply.github.com
 
     steps:
       - name: Checkout
