--- a/.npmignore
+++ b/.npmignore
@@ -15,10 +15,10 @@ karma.conf.js
 scripts
 .npmignore
 .jshintrc
-amplitude.min.js
-amplitude-snippet.min.js
-amplitude.nocompat.min.js
-amplitude-segment-snippet.min.js
+datadive.min.js
+datadive-snippet.min.js
+datadive.nocompat.min.js
+datadive-segment-snippet.min.js
 *.log
 src
 .watchmanconfig
